Refactoring of the Open Connection wizard to facilitate further use of the server connection code

--- a/DatabaseWizards/src/org/unesco/jisis/wizards/connopen/Bundle_es_ES.properties
+++ b/DatabaseWizards/src/org/unesco/jisis/wizards/connopen/Bundle_es_ES.properties
@@ -1,12 +1,12 @@
 # Sample ResourceBundle properties file
-CTL_ConnOpenWizardAction=Abrir conexión
-CTL_ConnOpenWizardPanel=Abrir conexión remota a base de datos
+CTL_ConnOpenWizardAction=Abrir conexi\u00f3n
+CTL_ConnOpenWizardPanel=Abrir conexi\u00f3n remota a base de datos
 CTL_ConnOpenWizardStepOne=Ingrese detalles de base de datos remota
-connOpenVisualPanel1.lblPort.text=Puerto(default 1111):
-connOpenVisualPanel1.txtUsername.text=admin
-connOpenVisualPanel1.txtPassword.text=admin
-connOpenVisualPanel1.lblUsername.text=Usuario:
-connOpenVisualPanel1.lblPassword.text=Contraseña:
-connOpenVisualPanel1.txtHostName.text=localhost
-connOpenVisualPanel1.txtPort.text=1111
-connOpenVisualPanel1.lblHostName.text=Host Name:
+ConnectionOpenVisualPanel1.txtPassword.text=admin
+ConnectionOpenVisualPanel1.txtUsername.text=admin
+ConnectionOpenVisualPanel1.txtPort.text=1111
+ConnectionOpenVisualPanel1.txtHostName.text=localhost
+ConnectionOpenVisualPanel1.lblPassword.text=Contrase\u00f1a:
+ConnectionOpenVisualPanel1.lblUsername.text=Usuario:
+ConnectionOpenVisualPanel1.lblPort.text=Puerto(default 1111):
+ConnectionOpenVisualPanel1.lblHostName.text=Host Name:
