--- a/DatabaseWizards/src/org/unesco/jisis/wizards/connopen/Bundle_fr_FR.properties
+++ b/DatabaseWizards/src/org/unesco/jisis/wizards/connopen/Bundle_fr_FR.properties
@@ -2,11 +2,16 @@
 CTL_ConnOpenWizardAction=Ouvrir la Connection
 CTL_ConnOpenWizardPanel=Ouvrir une Base Distante
 CTL_ConnOpenWizardStepOne=Entrez les d\u00e9tails de la base
-connOpenVisualPanel1.lblPort.text=Port (d\u00e9faut 1111)
-connOpenVisualPanel1.txtUsername.text=admin
-connOpenVisualPanel1.txtPassword.text=admin
-connOpenVisualPanel1.lblUsername.text=Utilisateur:
-connOpenVisualPanel1.lblPassword.text=Mot de Passe:
-connOpenVisualPanel1.txtHostName.text=localhost
-connOpenVisualPanel1.txtPort.text=1111
-connOpenVisualPanel1.lblHostName.text=Nom d'H\u00f4te
+ConnectionOpenVisualPanel1.txtPassword.text=admin
+ConnectionOpenVisualPanel1.txtUsername.text=admin
+ConnectionOpenVisualPanel1.txtPort.text=1111
+ConnectionOpenVisualPanel1.txtHostName.text=localhost
+ConnectionOpenVisualPanel1.lblPassword.text=Mot de Passe:
+ConnectionOpenVisualPanel1.lblUsername.text=Utilisateur:
+ConnectionOpenVisualPanel1.lblPort.text=Port (d\u00e9faut 1111)
+ConnectionOpenVisualPanel1.lblHostName.text=Nom d'H\u00f4te
+MSG_ConnAlreadyEstablished=Connection \u00e0 l'h\u00f4te [ {0} ] sur le port [ {0} ] d\u00e9j\u00e0 \u00e9tablie!
+MSG_CannotAuthenticate=Impossible d'Authentifier l'utillisateur avec ce mot de passe\n Essayez \u00e0 nouveau 
+MSG_ExceptionRaised=Exception d\u00e9clench\u00e9e [ {0} ]
+MSG_ConnectionToServerPleaseWait=Connection au serveur, veuillez patienter ...
+MSG_ConnectedToServer=Connect\u00e9 au serveur
