Improvements: Data Entry and Advanced Data Entry Modules are now synchronized  to display the Data Viewer or Search Module record

--- a/Data Entry Ex/src/org/unesco/jisis/dataentryex/Bundle_es_ES.properties
+++ b/Data Entry Ex/src/org/unesco/jisis/dataentryex/Bundle_es_ES.properties
@@ -32,7 +32,7 @@ HINT_Save=Salvar Registro
 
 HINT_WKSSel=Selecciones Hoja de Ingreso de Datos
 
-HINT_MFN=Escriba número de MFN y presione Enter para navegar
+HINT_MFN=Escriba n\u00famero de MFN y presione Enter para navegar
 
 BTN_Refresh=Refrescar
 
@@ -44,24 +44,22 @@ LBL_WKS=Hoja de Ingreso
 
 MSG_DatabaseWithoutAnyWorksheets=Esta base de datos no tiene Hoja de Ingreso!\nIngreso de datos cancelado.
 MSG_DataEntryErrorDialogTitle=Error de Ingreso de Datos
-MSG_DatabaseWithEmptyWorksheets=Todas las hojas de ingreso están vacías.
-MSG_MfnParseError=Error de Conversión, valor inválido de MFN!
-MSG_MfnInvalid=MFN inválido! No puede ser <0 o > Ultimo MFN
+MSG_DatabaseWithEmptyWorksheets=Todas las hojas de ingreso est\u00e1n vac\u00edas.
+MSG_MfnParseError=Error de Conversi\u00f3n, valor inv\u00e1lido de MFN!
+MSG_MfnInvalid=MFN inv\u00e1lido! No puede ser <0 o > Ultimo MFN
 MSG_RecordSuccessfullySaved=Registro salavado exitosamente
 MSG_RecordSuccessfullyDeleted=Registro borrado exitosamente
 MSG_DataEntryErrorsInFst=No puede hacer Ingreso de Datos porque hay errores en la FST!\nFavor corrija la FST
 MSG_RecordSuccessfullyCopied=Registro Nuevo creado exitosamente con los mismos contenidos que el actual.\nEl registro creado fue asignado con el MFN {}.
 
 MSG_TagLabel=Etiqueta
-MSG_NameLabel=Descripción
+MSG_NameLabel=Descripci\u00f3n
 MSG_TypeLabel=Tipo
 MSG_FieldLabel=Campo
 
-MSG_DeleteRecLabel=Va a borrar el registro seleccionado. ¿Está seguro?
+MSG_DeleteRecLabel=Va a borrar el registro seleccionado. \u00bfEst\u00e1 seguro?
 MSG_DeleteRecDialogTitle=Borrar el Registro Seleccionado
 OutlineTopComponent.btnReload.text=Cargar nuevamente
-OutlineTopComponent.btnShowHide.toolTipText=mostrar (remover) los campos vacíos de la presentación
-OutlineTopComponent.btnShowHide.text=Mostrar/Ocultar los Campos Vacíos
 OutlineTopComponent.btnPaste.toolTipText=Pegar un registro desde la Pila
 OutlineTopComponent.btnPaste.text=Pegar
 OutlineTopComponent.btnCopy.toolTipText=Copiar el registro actual a la Pila
@@ -73,6 +71,6 @@ OutlineTopComponent.btnCreateCopy.text=Crear una copia
 OutlineTopComponent.btnReload.toolTipText=Cancela todos los cambios realizados y restaura el registro con su estado inicial.
 OutlineTopComponent.lblRecordChanged.text=
 
-MSG_SaveRecordChanges=Database {0} - El registro actual ha cambiado y no se salvó!\n¿Desea salvar el registro?
-MSG_SaveRecordChangesTitle=Registro Actual cambió y NO fue salvado
+MSG_SaveRecordChanges=Database {0} - El registro actual ha cambiado y no se salv\u00f3!\n\u00bfDesea salvar el registro?
+MSG_SaveRecordChangesTitle=Registro Actual cambi\u00f3 y NO fue salvado
 MSG_RecordSuccessfullySaved=Registro salvado exitosamente
