Fix the Spanish "Data Entry" menu item

--- a/DataEntryExDl/src/org/unesco/jisis/dataentryexdl/Bundle_es_ES.properties
+++ b/DataEntryExDl/src/org/unesco/jisis/dataentryexdl/Bundle_es_ES.properties
@@ -1,5 +1,7 @@
 OpenIDE-Module-Name=DataEntryExDl
-CTL_DataEntryExDlAction=Digital Library Ingreso de datos avanzado
+CTL_DataEntryExDlAction=Entrada de datos
+MSG_NotAuthorized=User Doesn't have permission for Data Entry (CRUD) action!
+MSG_NotAuthorizedDialogTitle=No Permission 
 CTL_DataEntryExDlTopComponent=Ingreso de datos DL
 HINT_DataEntryExDlTopComponent=Esta es una ventana de ingreso de DL
 OpenIDE-Module-Name=Ingreso de datos ExDl
@@ -11,7 +13,7 @@ OutlineTopComponent.btnLast.toolTipText=Ultimo MFN
 OutlineTopComponent.btnNext.toolTipText=Siguiente MFN
 OutlineTopComponent.btnPrev.toolTipText=Anterior MFN
 OutlineTopComponent.btnFirst.toolTipText=Primer MFN
-OutlineTopComponent.txtMFN.toolTipText=Ingrese un número de MFN y presione Enter para navegar
+OutlineTopComponent.txtMFN.toolTipText=Ingrese un n\u00famero de MFN y presione Enter para navegar
 OutlineTopComponent.txtMFN.text=0
 OutlineTopComponent.lblMFN.text=MFN:
 OutlineTopComponent.cmbWKS.toolTipText=Seleccione la hoja de ingreso
@@ -33,7 +35,7 @@ HINT_Save=Salvar registro
 
 HINT_WKSSel=Seleccionar hoja de ingreso de datos
 
-HINT_MFN=Ingrese número de MFN y presione Enter para navegar
+HINT_MFN=Ingrese n\u00famero de MFN y presione Enter para navegar
 
 BTN_Refresh=Refrescar
 
@@ -45,24 +47,24 @@ LBL_WKS=Hoja de ingreso
 
 MSG_DatabaseWithoutAnyWorksheets=Esta base no tiene hoja de ingreso!\nIngreso de datos cancelado
 MSG_DataEntryErrorDialogTitle=Error en ingreso de datos
-MSG_DatabaseWithEmptyWorksheets=Todas las hojas de ingreso están vacías!
-MSG_MfnParseError=Error de conversión, valor inválido del MFN!
-MSG_MfnInvalid=MFN inválido! No puede ser <0 o >último MFN
+MSG_DatabaseWithEmptyWorksheets=Todas las hojas de ingreso est\u00e1n vac\u00edas!
+MSG_MfnParseError=Error de conversi\u00f3n, valor inv\u00e1lido del MFN!
+MSG_MfnInvalid=MFN inv\u00e1lido! No puede ser <0 o >\u00faltimo MFN
 MSG_RecordSuccessfullySaved=Registro salvado exitosamente
 MSG_RecordSuccessfullyDeleted=El registro fue borrado exitosamente
 MSG_DataEntryErrorsInFst=No puede hacer ingreso de datos cuando hay errores en la FST!\nFavor corrija la FST
 MSG_RecordSuccessfullyCopied=Nuevo registro creado exitosamente con los mismos contenidos del actual.\nEl registro creado tiene asignado el MFN {}.
 
 MSG_TagLabel=Etiqueta
-MSG_NameLabel=Descripción
+MSG_NameLabel=Descripci\u00f3n
 MSG_TypeLabel=Tipo
 MSG_FieldLabel=Campo
 
-MSG_DeleteRecLabel=Va a borrar el resistro seleccionado, ¿está seguro?
+MSG_DeleteRecLabel=Va a borrar el resistro seleccionado, \u00bfest\u00e1 seguro?
 MSG_DeleteRecDialogTitle=Borrar registro seleccionado
 OutlineTopComponent.btnReload.text=Cargar nuevamente
-OutlineTopComponent.btnShowHide.toolTipText=mostrar/ocultar los campos vacíos en la presentación
-OutlineTopComponent.btnShowHide.text=Mostrar/Ocultar los campos vacíos
+OutlineTopComponent.btnShowHide.toolTipText=mostrar/ocultar los campos vac\u00edos en la presentaci\u00f3n
+OutlineTopComponent.btnShowHide.text=Mostrar/Ocultar los campos vac\u00edos
 OutlineTopComponent.btnPaste.toolTipText=Copiar un registro desde la pila
 OutlineTopComponent.btnPaste.text=Pegar
 OutlineTopComponent.btnCopy.toolTipText=Copiar un registro en la pila.
@@ -73,20 +75,20 @@ OutlineTopComponent.btnCreateCopy.toolTipText=Crea un nuevo registro con los mis
 OutlineTopComponent.btnCreateCopy.text=Crear una copia
 OutlineTopComponent.btnReload.toolTipText=Cancela todos los cambios realizados y restaura el registro a su estado inicial.
 OutlineTopComponent.lblRecordChanged.text=
-MSG_SaveRecordChanges=Base {0} - El registro actual cambió y no fue salvado!\n¿Desea salvar el registro?
-MSG_SaveRecordChangesTitle=El registro actual cambió y NO fue salvado
+MSG_SaveRecordChanges=Base {0} - El registro actual cambi\u00f3 y no fue salvado!\n\u00bfDesea salvar el registro?
+MSG_SaveRecordChangesTitle=El registro actual cambi\u00f3 y NO fue salvado
 MSG_RecordSuccessfullySaved=Registro salvado exitosamente.
-
-
-
-
-
-
-
-
-
-
-
+MSG_SavingDocumentOnServer=Saving Document on Server ...
+MSG_DocumentSavedOnServer=Document saved on Server
+LBL_MFN_1=MFN: 
+LBL_WKS_1=Worksheet: 
+MSG_Access_PickList=Access PickList
+MSG_Delete_Occurrence=Delete Occurrence
+MSG_Add_Occurrence=Add Occurrence
+MSG_ValidationFormatError=Record or Field not validated!
+MSG_RecordNotValidated=Record not saved! Validation rules are not respected, click on "VAL" to see the errors
+MSG_RecordLockedByUser=Record with mfn {0} locked by user: {1}
+MSG_DataEntryRecordLockedTitle=Record Locked By Another User
 
 
 
